--- a/frontend/src/components/Navbar/SplashNavBar.css
+++ b/frontend/src/components/Navbar/SplashNavBar.css
@@ -43,6 +43,7 @@
     display: flex;
     flex-direction: column;
     border-radius: 8px;
+    overflow: hidden;
 }
 
 .dropdown-menu a {
